# witness-kv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  go.mod  pom.xml
client/: CMakeLists.txt  Dockerfile  client.cc  client_util.cc  client_util.h  client_util.hh  client_util_common.hh  dependency-reduced-pom.xml  pom.xml
client/src/main/java/edu/stanford/witnesskvs/client/: Client.java
client/src/main/proto/: kvs.proto
etc/: build_type.cmake  cflags.cmake  format.cmake
googletest/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
googletest/googletest/samples/: sample1.cc  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2_unittest.cc  sample3_unittest.cc  sample4.cc  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
googletest/googletest/src/: gtest-assertion-result.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
googletest/googletest/test/: googletest-break-on-failure-unittest_.cc  googletest-catch-exceptions-test_.cc  googletest-color-test_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test_.cc  googletest-failfast-unittest_.cc  googletest-filepath-test.cc  googletest-filter-unittest_.cc  googletest-global-environment-unittest_.cc  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-message-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-param-test-invalid-name1-test_.cc  googletest-param-test-invalid-name2-test_.cc  googletest-param-test-test.cc  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-setuptestsuite-test_.cc  googletest-shuffle-test_.cc  googletest-test-part-test.cc  googletest-throw-on-failure-test_.cc  googletest-uninitialized-test_.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_assert_by_exception_test.cc  gtest_dirs_test.cc  gtest_environment_test.cc  gtest_help_test_.cc  gtest_list_output_unittest_.cc  gtest_main_unittest.cc  gtest_no_test_unittest.cc  gtest_pred_impl_unittest.cc  gtest_premature_exit_test.cc  gtest_prod_test.cc  gtest_repeat_test.cc  (+11 more)
kv-linearizability-check/: history.json  main_test.go
log/: CMakeLists.txt  byte_conversion.h  crc32.cc  crc32.h  file_writer.cc  file_writer.h  file_writer_test.cc  log_faker.cc  log_reader.cc  log_reader.h  log_reader_main.cc  log_reader_test.cc  log_util.cc  log_util.h  log_writer.cc  log_writer.h  log_writer_test.cc  logs_loader.cc  logs_loader.h  logs_loader_test.cc  logs_truncator.cc  logs_truncator.h  logs_truncator_test.cc  status_macros.h
paxos/: CMakeLists.txt  acceptor.cc  acceptor.h  acceptor.hh  common.hh  leader.cc  leader.hh  node.cc  node.hh  nodes_config.txt  nodes_config_5nodes.txt  paxos.cc  paxos.h  paxos.hh  paxos_node.cc  paxos_node.h  proposer.cc  proposer.h  proposer.hh  replicated_log.cc  replicated_log.h  replicated_log.hh  utils.cc  utils.hh
paxos/proto/: CMakeLists.txt  paxos.proto
proto/: CMakeLists.txt  kvs.proto  log.proto  paxos.proto
server/: CMakeLists.txt  Dockerfile  kvs_nodes_cfg.txt  kvs_server.cc  kvs_server.h  kvs_server.hh  paxos_server.cc  rocksdb_container.cc  rocksdb_container.h  rocksdb_container_test.cc
tests/: CMakeLists.txt  paxos_test.cc  paxos_tests.cc  protobuf_matchers.cc  rocksdb_test.cc  sanity.cc  test_client.cc  test_macros.h  test_main.cc  test_proposer.cc  test_util.cc  test_util.h
util/: mediapipe_source_location.h  mediapipe_status.h  mediapipe_status_builder.h  node.cc  node.h  status_macros.h
